tests/ui/ffi.stderr
error: `extern` fn uses type `MyPhantom<i32>`, which is not FFI-safe
  --> tests/ui/ffi.rs:10:39
   |
10 | pub extern "C" fn extern_fn(_phantom: MyPhantom<i32>) {}
   |                                       ^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint
note: the type is defined here
  --> tests/ui/ffi.rs:7:1
   |
 7 | #[phantom]
   | ^^^^^^^^^^
note: the lint level is defined here
  --> tests/ui/ffi.rs:3:9
   |
 3 | #![deny(improper_ctypes_definitions)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `phantom` (in Nightly builds, run with -Z macro-backtrace for more info)
